[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze"
version = "0.1.0"
authors = [
  { name = "GSD Executor" },
]
description = "Taiwan stock screener based on Squeeze Momentum logic"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance",
    "pandas",
    "pandas-ta",
    "typer",
    "requests",
    "requests-cache",
    "rich",
    "mplfinance",
    "lxml",
    "html5lib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
squeeze = "squeeze.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["squeeze*"]

[tool.ruff]
line-length = 88
target-version = "py39"
